--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,29 @@
-.App {
+/*
+.titulo-clase {
   text-align: center;
+  font-size: 2rem;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+header {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  flex-direction: row;
+  margin: auto;
 }
 
-.App-link {
-  color: #61dafb;
+.navBar {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  background-color: black;
+  padding: 20px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.itemNav {
+  color:blanchedalmond;
+  margin:0px 20px 0px 20px;
 }
+
+.logoMain {
+  width:40px;
+}
+*/
