--- a/src/components/cart/cartStyle.css
+++ b/src/components/cart/cartStyle.css
@@ -1,29 +1,40 @@
- 
-  .purchase-card {
-    margin: 10px auto;
-    width: 400px;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    padding: 1em;
-  }
 
-  .purchase-card img{
-  width:100px;
-  height:auto;
-  float:left;
-  }
+.purchase-card {
+margin: 10px auto;
+width: 400px;
+box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+padding: 1em;
+}
 
-  .detalleCompra {
-    text-align: right;
-  }
+.purchase-card img{
+width:100px;
+height:auto;
+float:left;
+}
 
-  .tituloCarrito {
-    text-align: center;
-    padding:30px;
-  }
-  
-  .checkOut{
-  right:0px;
-  }
-  .ocultar {
-  display:none;
-  }
+.detalleCompra {
+text-align: right;
+}
+
+.tituloCarrito {
+text-align: center;
+padding:30px;
+}
+
+.checkOut{
+right:0px;
+}
+.ocultar {
+display:none;
+}
+
+.imgWidget{
+width:20px;
+height:auto;
+float:left;
+}
+
+.widget{
+float:right;
+top:50%;
+}
