Finalizado primer inserción de compra.

--- a/src/components/cart/cartStyle.css
+++ b/src/components/cart/cartStyle.css
@@ -6,7 +6,7 @@ box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 padding: 1em;
 }
 
-.purchase-card img{
+.purchase-card img, td img{
 width:100px;
 height:auto;
 float:left;
@@ -22,8 +22,19 @@ padding:30px;
 }
 
 .checkOut{
-right:0px;
+width: 100%;
 }
+
+.vaciar{
+    float:left;
+}
+
+.btnCheckout{
+    float:right;
+    margin-left:20px;
+}
+
+    
 .ocultar {
 display:none;
 }
